avoid that filter table content will be hidden by Cacti JS default action

--- a/include/themes/midwinter/css/media/compact.css
+++ b/include/themes/midwinter/css/media/compact.css
@@ -149,6 +149,9 @@
         & > div[class^="mdw-Dock"] {
             background: var(--background-navigation-top);
             &:has(div) {
+                .cactiTable {
+                    display: block !important;
+                }
                 .cactiTableTitle,
                 .cactiTableButton {
                     display: none;
